Enigma/testing/error/conf1err.inp
* B BETA I II III AAAA
SDFS